# Director.y

./: .env.example  .gitignore  LICENSE  README.md  design.md  plan.md  pyproject.toml
src/directory/: __init__.py  __main__.py  config.py  configure.py  execution.py  main.py  models.py  ui.py  validation.py  workflows.py
src/directory/agents/: __init__.py  base.py  executor.py  planner.py  query.py  summary.py
src/directory/text/: __init__.py  executor_prompt.txt  help.txt  planner_prompt.txt  query_prompt.txt  summary_prompt.txt
src/directory/tui/: __init__.py  app.py  directory.tcss  widgets.py
tests/: test_agents.py  test_execution.py
