[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directory"
version = "1.0.0"
description = "AI-powered filesystem management via natural language"
authors = [
    { name = "Director.y Contributors" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.90.0",
]
homepage = "https://github.com/raytonc/Director.y"
repository = "https://github.com/raytonc/Director.y"

[project.urls]
"Bug Reports" = "https://github.com/raytonc/Director.y/issues"
"Source" = "https://github.com/raytonc/Director.y"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dy = "directory.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
directory = ["py.typed"]
